--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,25 +23,25 @@ body {
 }
 
 .pink {
-  background-color: rgb(255, 0, 191);
+  background-color: rgb(255, 68, 95);
   width: 100px;
   height:100px;
 }
 
-.purple {
-  background-color: rgb(142, 56, 209);
+.orange-yellow {
+  background-color: rgb(255, 189, 123);
   width: 100px;
   height:100px;
 }
 
-.blue {
-  background-color: rgb(0, 240, 255);
+.grey {
+  background-color: rgb(40, 40, 40);
   width: 100px;
   height: 100px;
 }
 
 .gradient {
-  background: linear-gradient(to right, rgb(255, 0, 191), rgb(0, 240, 255) 100%);
+  background: linear-gradient(to right, rgb(255, 68, 95), rgb(255, 189, 123) 100%);
   width: 100%;
   height: 300px;
   margin: 20px 0;
