added 'X' and check marks for validation

--- a/css/validation.css
+++ b/css/validation.css
@@ -1,7 +1,39 @@
 input.ng-invalid.ng-touched {
     border: 2px solid #FA787E;
-  }
+}
 
 input.ng-valid.ng-touched {
     border: 2px solid #78FA89;
-  }
+}
+
+.val-sign {
+  font-size: 18px;
+  position: absolute;
+}
+
+.ok-check {
+  color: #00e12a;
+  display: none;
+}
+
+.x-mark {
+  color: #ff000f;
+  display: none;
+}
+
+.fName,
+.lName {
+  padding-left: 95px;
+}
+
+.userEmail {
+  padding-left: 115px;
+}
+
+.userPass {
+  padding-left: 98px;
+}
+
+.userRePass {
+  padding-left: 60px;
+}
