--- a/css/default.css
+++ b/css/default.css
@@ -260,6 +260,19 @@ h1.welcome {
   overflow-y: scroll;
 }
 
+.each-result {
+  padding: 15px 0 5px 0;
+  border-bottom: 1px solid #393939;
+}
+
+.track {
+  padding: 0 10px;
+}
+
+.artist {
+  color: #888;
+}
+
 .add-button:hover {
   background: transparent !important;
   border: 1px solid #ff445f !important;
@@ -267,6 +280,11 @@ h1.welcome {
 }
 
 .add-button {
+  background: #ff445f;
+  border: none;
+  border-radius: 50%;
+  padding: 8px 10px 4px 10px;
+  margin: 28px 30px 0 0 ;
   float: right;
 }
 
