--- a/css/default.css
+++ b/css/default.css
@@ -187,6 +187,32 @@ h1.welcome {
   background: rgb(40, 40, 40);
   height: 600px;
   margin: 50px 0;
+  color: #fff;
+}
+
+.playing-img-icon {
+  background-color: #ff445f;
+  height: 64px;
+  width: 64px;
+  margin: 28px 0 0 28px;
+}
+
+.playing-track {
+  padding-top: 28px;
+}
+
+.playing-audio {
+  margin-top: 10px;
+}
+
+.track-playing {
+  border-bottom: 1px solid #383838;
+  height: 120px;
+}
+
+.added-tracks {
+  padding: 15px 0 15px 15px;
+  border-bottom: 1px solid #383838;
 }
 
 .search-container {
