--- a/css/default.css
+++ b/css/default.css
@@ -215,6 +215,10 @@ h1.welcome {
   border-bottom: 1px solid #383838;
 }
 
+.number {
+  color: #ff445f;
+}
+
 .search-container {
   background: #282828;
   height: 600px;
@@ -292,7 +296,11 @@ h1.welcome {
 }
 
 .track {
-  padding: 0 10px;
+  padding-right: 10px;
+}
+
+.img {
+  padding-right: 10px;
 }
 
 .artist {
