--- a/css/default.css
+++ b/css/default.css
@@ -296,11 +296,12 @@ h1.welcome {
 }
 
 .track {
-  padding-right: 10px;
+  padding: 0 10px;
 }
 
-.img {
-  padding-right: 10px;
+.track-btn {
+  background: transparent;
+  border: none;
 }
 
 .artist {
